<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center">
        <TextView
            android:id="@+id/loadingFailedMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_failed_message"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:maxLines="2"
            android:textSize="16sp"/>
        <LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:layout_below="@id/loadingFailedMessage"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonRefresh"
                android:layout_width="144dp"
                android:layout_height="64dp"
                android:background="@color/white1"
                android:contentDescription="@string/refresh_button_description"
                android:src="@drawable/ic_refresh"
                android:clickable="true"/>
            <ImageButton
                android:layout_width="144dp"
                android:layout_height="64dp"
                android:id="@+id/buttonClose"
                android:src="@drawable/ic_close"
                android:clickable="true"
                android:background="@color/white1"
                android:contentDescription="@string/close_button_description" />
        </LinearLayout>
    </RelativeLayout>