<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    tools:context="com.lance.kieventmobile.ui.activities.EventActivity">

    <ImageView
        android:id="@+id/eventBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/screen_background"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@android:color/black"
        android:fitsSystemWindows="true" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/eventTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            tools:text="Title"
            android:textAlignment="center"
            android:textColor="@color/white2"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventImage" />
        <Button
            android:id="@+id/btnBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/ButtonBuy"
            android:background="@drawable/btn_buy"
            android:drawableStart="@android:drawable/ic_menu_send"
            android:text="@string/button_buy"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventTitle"/>
        <ImageView
            android:id="@+id/eventImage"
            android:layout_width="@dimen/event_details_image_width"
            android:layout_height="@dimen/event_details_image_height"
            android:layout_marginTop="32dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/event_image_content_descr" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/eventDetails"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBuy"
            app:layout_constraintVertical_bias="0.0"
            card_view:cardBackgroundColor="@color/colorPrimaryDark">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:scrollbars="vertical">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark">
                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/eventDateTimeContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                        <TextView
                            android:id="@+id/eventDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_date"
                            android:drawablePadding="8dp"
                            android:gravity="center"
                            android:textColor="@color/white2"
                            android:textSize="18sp"
                            tools:text="Date"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                        <TextView
                            android:id="@+id/eventTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_time"
                            android:gravity="center"
                            android:textColor="@color/white2"
                            android:textSize="18sp"
                            tools:text="Time"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>
                    </android.support.constraint.ConstraintLayout>
                        <TextView
                            android:id="@+id/eventAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/white2"
                            android:textSize="18sp"
                            tools:text="Address"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_address"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/eventDateTimeContainer" />
                        <TextView
                            android:id="@+id/eventPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="@color/white2"
                            android:textSize="18sp"
                            tools:text="Price"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_price"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/eventAddress" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v4.widget.NestedScrollView>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>